--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1075,7 +1075,7 @@
                                     <child>
                                       <object class="GtkLabel" id="label_cie_title">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes" comments="Section heading for device profile settings">CIE Diagram:</property>
+                                        <property name="label" translatable="yes" comments="Section heading for CIE and TRC graphs">Profile Graphs:</property>
                                         <attributes>
                                           <attribute name="weight" value="bold"/>
                                         </attributes>
@@ -1096,24 +1096,57 @@
                                     <property name="visible">True</property>
                                     <property name="left_padding">12</property>
                                     <child>
-                                      <object class="GtkAspectFrame" id="aspectframe1">
+                                      <object class="GtkHBox" id="hbox47">
                                         <property name="visible">True</property>
-                                        <property name="label_xalign">0</property>
-                                        <property name="shadow_type">none</property>
                                         <child>
-                                          <object class="GtkHBox" id="hbox_cie_widget">
+                                          <object class="GtkAspectFrame" id="aspectframe1">
                                             <property name="visible">True</property>
+                                            <property name="label_xalign">0</property>
+                                            <property name="shadow_type">none</property>
                                             <child>
-                                              <object class="GtkLabel" id="label3">
+                                              <object class="GtkHBox" id="hbox_cie_widget">
                                                 <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label3">
+                                                    <property name="visible">True</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
                                               </object>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
-                                                <property name="position">0</property>
-                                              </packing>
                                             </child>
                                           </object>
+                                          <packing>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkAspectFrame" id="aspectframe2">
+                                            <property name="visible">True</property>
+                                            <property name="label_xalign">0</property>
+                                            <property name="shadow_type">none</property>
+                                            <child>
+                                              <object class="GtkHBox" id="hbox_trc_widget">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label6">
+                                                    <property name="visible">True</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="position">1</property>
+                                          </packing>
                                         </child>
                                       </object>
                                     </child>
