--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="dialog_calibrate">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes" comments="window title">Manual calibration wizar</property>
+    <property name="title" translatable="yes" comments="window title">Manual calibration wizard</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
     <property name="type_hint">normal</property>
