trivial: Only show the profile graphs if we have valid CIE co-ordinates

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1080,7 +1080,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkVBox" id="vbox2">
+                                  <object class="GtkVBox" id="vbox_profile_graphs">
                                     <property name="visible">True</property>
                                     <property name="orientation">vertical</property>
                                     <property name="spacing">6</property>
