trivial: Update screenshots for the coming release

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1607,7 +1607,7 @@
             </child>
             <child>
               <object class="GtkButton" id="button_default">
-                <property name="label" translatable="yes">_Set default</property>
+                <property name="label" translatable="yes">_Make Default</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
