trivial: add a few fixes for where there are no profiles in the list

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -77,7 +77,7 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">15</property>
                             <child>
-                              <object class="GtkVBox" id="vbox7">
+                              <object class="GtkVBox" id="vbox_device">
                                 <property name="visible">True</property>
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">6</property>
@@ -616,7 +616,7 @@
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">6</property>
                                 <child>
-                                  <object class="GtkVBox" id="vbox2">
+                                  <object class="GtkVBox" id="vbox_profile_info">
                                     <property name="visible">True</property>
                                     <property name="orientation">vertical</property>
                                     <property name="spacing">6</property>
