Show whether the ICC profile has a VCGT tag in the UI

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -916,6 +916,58 @@
                                                   </packing>
                                                 </child>
                                                 <child>
+                                                  <object class="GtkHBox" id="hbox_vcgt">
+                                                    <property name="visible">True</property>
+                                                    <property name="spacing">9</property>
+                                                    <child>
+                                                      <object class="GtkHBox" id="hbox48">
+                                                        <property name="visible">True</property>
+                                                        <child>
+                                                          <object class="GtkLabel" id="label_title_vcgt">
+                                                            <property name="visible">True</property>
+                                                            <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Display correction:</property>
+                                                          </object>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                      </object>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <object class="GtkHBox" id="hbox49">
+                                                        <property name="visible">True</property>
+                                                        <child>
+                                                          <object class="GtkLabel" id="label_vcgt">
+                                                            <property name="visible">True</property>
+                                                            <property name="label">yes</property>
+                                                            <property name="use_markup">True</property>
+                                                            <property name="wrap">True</property>
+                                                            <property name="selectable">True</property>
+                                                          </object>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                      </object>
+                                                      <packing>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="padding">3</property>
+                                                    <property name="position">5</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
                                                   <object class="GtkHBox" id="hbox_copyright">
                                                     <property name="visible">True</property>
                                                     <property name="spacing">9</property>
@@ -964,7 +1016,7 @@
                                                     <property name="expand">False</property>
                                                     <property name="fill">False</property>
                                                     <property name="padding">3</property>
-                                                    <property name="position">5</property>
+                                                    <property name="position">6</property>
                                                   </packing>
                                                 </child>
                                                 <child>
@@ -1016,7 +1068,7 @@
                                                     <property name="expand">False</property>
                                                     <property name="fill">False</property>
                                                     <property name="padding">3</property>
-                                                    <property name="position">6</property>
+                                                    <property name="position">7</property>
                                                   </packing>
                                                 </child>
                                                 <child>
@@ -1068,7 +1120,7 @@
                                                     <property name="expand">False</property>
                                                     <property name="fill">False</property>
                                                     <property name="padding">3</property>
-                                                    <property name="position">7</property>
+                                                    <property name="position">8</property>
                                                   </packing>
                                                 </child>
                                               </object>
