trivial: Fix up a translator comment

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -925,7 +925,7 @@
                                                         <child>
                                                           <object class="GtkLabel" id="label_title_vcgt">
                                                             <property name="visible">True</property>
-                                                            <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Display correction:</property>
+                                                            <property name="label" translatable="yes" comments="If the profile contains a display correction table">Display correction:</property>
                                                           </object>
                                                           <packing>
                                                             <property name="expand">False</property>
