--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -315,6 +315,7 @@
                                         <child>
                                           <object class="GtkComboBox" id="combobox_profile">
                                             <property name="visible">True</property>
+                                            <property name="tooltip_text" translatable="yes">The color profile to use for the selected device</property>
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
@@ -513,6 +514,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip_text" translatable="yes">Create a color profile for the selected device</property>
                                 <property name="use_underline">True</property>
                               </object>
                               <packing>
@@ -526,6 +528,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip_text" translatable="yes">Delete the disconnected device - if you reconnect the device it will reappear in the list</property>
                                 <property name="use_underline">True</property>
                               </object>
                               <packing>
@@ -1262,6 +1265,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip_text" translatable="yes">Import a ICC file from another location</property>
                                 <property name="use_underline">True</property>
                               </object>
                               <packing>
@@ -1275,6 +1279,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip_text" translatable="yes">Delete the currently selected color profile</property>
                                 <property name="use_underline">True</property>
                               </object>
                               <packing>
@@ -1347,16 +1352,39 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
+                              <object class="GtkHBox" id="hbox50">
+                                <property name="visible">True</property>
+                                <child>
+                                  <object class="GtkLabel" id="label7">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">These settings control how color management is applied to your desktop.</property>
+                                    <property name="wrap">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="checkbutton_display">
                                 <property name="label" translatable="yes">_Apply display correction</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">Program the video card with the adjusted color values so all windows are color corrected</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1365,11 +1393,12 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">Set a property on the system so applications use the default display profile</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -1412,6 +1441,28 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
+                              <object class="GtkHBox" id="hbox51">
+                                <property name="visible">True</property>
+                                <child>
+                                  <object class="GtkLabel" id="label8">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">A working space is the range of colors that can be encoded into an image.</property>
+                                    <property name="wrap">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkHBox" id="hbox42">
                                 <property name="visible">True</property>
                                 <property name="spacing">9</property>
@@ -1437,6 +1488,7 @@
                                 <child>
                                   <object class="GtkComboBox" id="combobox_space_rgb">
                                     <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">This is the default RGB working space to use in applications</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1445,7 +1497,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1474,6 +1526,7 @@
                                 <child>
                                   <object class="GtkComboBox" id="combobox_space_cmyk">
                                     <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">This is the default CMYK working space to use in applications</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1482,7 +1535,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -1526,6 +1579,28 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
+                              <object class="GtkHBox" id="hbox52">
+                                <property name="visible">True</property>
+                                <child>
+                                  <object class="GtkLabel" id="label9">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">The rendering intent is how one gamut size is mapped to another.</property>
+                                    <property name="wrap">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkHBox" id="hbox14">
                                 <property name="visible">True</property>
                                 <property name="spacing">9</property>
@@ -1551,6 +1626,7 @@
                                 <child>
                                   <object class="GtkComboBox" id="combobox_rendering_display">
                                     <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">The rendering intent to use when transforming from the image gamut to the display gamut</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1559,7 +1635,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1588,6 +1664,7 @@
                                 <child>
                                   <object class="GtkComboBox" id="combobox_rendering_softproof">
                                     <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">The rendering intent to use when transforming from the image gamut to the device output gamut</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1596,7 +1673,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -1640,6 +1717,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Open the documentation</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -1670,6 +1748,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Close this dialog</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
