--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1326,6 +1326,7 @@
                         <child>
                           <object class="GtkLabel" id="label1">
                             <property name="visible">True</property>
+                            <property name="tooltip_text" translatable="yes">These settings control how color management is applied to your desktop.</property>
                             <property name="label" translatable="yes">Display</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
@@ -1352,28 +1353,6 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
-                              <object class="GtkHBox" id="hbox50">
-                                <property name="visible">True</property>
-                                <child>
-                                  <object class="GtkLabel" id="label7">
-                                    <property name="visible">True</property>
-                                    <property name="label" translatable="yes">These settings control how color management is applied to your desktop.</property>
-                                    <property name="wrap">True</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
                               <object class="GtkCheckButton" id="checkbutton_display">
                                 <property name="label" translatable="yes">_Apply display correction</property>
                                 <property name="visible">True</property>
@@ -1384,7 +1363,7 @@
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
@@ -1398,7 +1377,7 @@
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="position">2</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
@@ -1415,6 +1394,7 @@
                         <child>
                           <object class="GtkLabel" id="label5">
                             <property name="visible">True</property>
+                            <property name="tooltip_text" translatable="yes">A working space is the range of colors that can be encoded into an image.</property>
                             <property name="label" translatable="yes">Working space</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
@@ -1440,28 +1420,6 @@
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
-                            <child>
-                              <object class="GtkHBox" id="hbox51">
-                                <property name="visible">True</property>
-                                <child>
-                                  <object class="GtkLabel" id="label8">
-                                    <property name="visible">True</property>
-                                    <property name="label" translatable="yes">A working space is the range of colors that can be encoded into an image.</property>
-                                    <property name="wrap">True</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
                             <child>
                               <object class="GtkHBox" id="hbox42">
                                 <property name="visible">True</property>
@@ -1497,7 +1455,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
@@ -1535,7 +1493,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">2</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
@@ -1553,6 +1511,7 @@
                         <child>
                           <object class="GtkLabel" id="label2">
                             <property name="visible">True</property>
+                            <property name="tooltip_text" translatable="yes">The rendering intent is how one gamut size is mapped to another.</property>
                             <property name="label" translatable="yes">Rendering intent</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
@@ -1578,28 +1537,6 @@
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
-                            <child>
-                              <object class="GtkHBox" id="hbox52">
-                                <property name="visible">True</property>
-                                <child>
-                                  <object class="GtkLabel" id="label9">
-                                    <property name="visible">True</property>
-                                    <property name="label" translatable="yes">The rendering intent is how one gamut size is mapped to another.</property>
-                                    <property name="wrap">True</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
                             <child>
                               <object class="GtkHBox" id="hbox14">
                                 <property name="visible">True</property>
@@ -1635,7 +1572,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
@@ -1673,7 +1610,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">2</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
