--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -548,10 +548,10 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHBox" id="hbox27">
+                  <object class="GtkHPaned" id="hpaned1">
                     <property name="visible">True</property>
+                    <property name="can_focus">True</property>
                     <property name="border_width">9</property>
-                    <property name="spacing">9</property>
                     <child>
                       <object class="GtkHBox" id="hbox29">
                         <property name="visible">True</property>
@@ -623,8 +623,8 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
-                        <property name="position">0</property>
+                        <property name="resize">False</property>
+                        <property name="shrink">True</property>
                       </packing>
                     </child>
                     <child>
@@ -1255,7 +1255,8 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="position">1</property>
+                        <property name="resize">True</property>
+                        <property name="shrink">False</property>
                       </packing>
                     </child>
                   </object>
