trivial: helpfully glade3 strips tooltips when you move a widget. Add them back.

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -65,6 +65,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="tooltip_text" translatable="yes">Create a color profile for the selected device</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
@@ -78,6 +79,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="tooltip_text" translatable="yes">Delete the disconnected device - if you reconnect the device it will reappear in the list</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
@@ -589,6 +591,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="tooltip_text" translatable="yes">Import a ICC file from another location</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
@@ -602,6 +605,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="tooltip_text" translatable="yes">Delete the currently selected color profile</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
