Do not show the 'Fine tuning' expander by default, and have configuration in GConf

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -371,9 +371,10 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkExpander" id="expander1">
+                          <object class="GtkExpander" id="expander_fine_tuning">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="expanded">True</property>
                             <child>
                               <object class="GtkAlignment" id="alignment4">
                                 <property name="visible">True</property>
