trivial: Actually show the dialog figures in the right places

--- a/data/gcm-spawn.ui
+++ b/data/gcm-spawn.ui
@@ -99,6 +99,16 @@
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkImage" id="image_figure">
+                        <property name="visible">True</property>
+                        <property name="stock">gtk-home</property>
+                        <property name="icon-size">6</property>
+                      </object>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkExpander" id="expander_details">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -122,7 +132,7 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
