HIG string and capitalization fixes
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -61,7 +61,7 @@
                                 <property name="spacing">6</property>
                                 <child>
                                   <object class="GtkButton" id="button_calibrate">
-                                    <property name="label" translatable="yes" comments="This is a button to calibrate the device by creating an ICC profile file using a hardware device or a reference image">Create _profile for device</property>
+                                    <property name="label" translatable="yes" comments="This is a button to calibrate the device by creating an ICC profile file using a hardware device or a reference image">Create _Profile for Device</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -74,7 +74,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_delete">
-                                    <property name="label" translatable="yes" comments="This is a button to delete the saved device">_Delete device</property>
+                                    <property name="label" translatable="yes" comments="This is a button to delete the saved device">_Delete Device</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -606,7 +606,7 @@
                                 <property name="spacing">6</property>
                                 <child>
                                   <object class="GtkButton" id="button_profile_import">
-                                    <property name="label" translatable="yes">_Import profile</property>
+                                    <property name="label" translatable="yes">_Import Profile</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -620,7 +620,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_profile_delete">
-                                    <property name="label" translatable="yes">_Delete profile</property>
+                                    <property name="label" translatable="yes">_Delete Profile</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
