--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="dialog_prefs">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">Color management</property>
+    <property name="title" translatable="yes">Color Management</property>
     <property name="icon_name">preferences-system</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
@@ -610,7 +610,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
-                                    <property name="tooltip_text" translatable="yes">Import a ICC file from another location</property>
+                                    <property name="tooltip_text" translatable="yes">Import an ICC file from another location</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
@@ -1126,7 +1126,7 @@
                                                     <child>
                                                       <object class="GtkLabel" id="label_title_filename">
                                                         <property name="visible">True</property>
-                                                        <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">File name:</property>
+                                                        <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Filename:</property>
                                                       </object>
                                                       <packing>
                                                         <property name="expand">False</property>
